--- a/Labs/7_CV_TransferLearning.ipynb
+++ b/Labs/7_CV_TransferLearning.ipynb
@@ -392,8 +392,8 @@
    "metadata": {},
    "source": [
     "> **Answers:**    \n",
-    "> 1.      \n",
-    "> 2.      "
+    "> 1.  Random rotation, translation, flipping, and random contrast\n",
+    "> 2.  Interestingly the displayed samples merely seem to be rotated and maybe blurred? I didn't see much change of contrast or flipping"
    ]
   },
   {
@@ -464,8 +464,8 @@
    "metadata": {},
    "source": [
     "> **Answers:**   \n",
-    "> 1.       \n",
-    "> 2.     "
+    "> 1.       The model is continuing to learn over the epoch as the training accuracy is increasing and the loss is decreasing.\n",
+    "> 2.     However, the validation accuracy and loss plateaus at around 20 epochs (the image in my notebook submission somehow didn't get saved, but this is what I saw)"
    ]
   },
   {
@@ -484,8 +484,8 @@
    "metadata": {},
    "source": [
     "> **Answers:**      \n",
-    "> 1.       \n",
-    "> 2.     "
+    "> 1.       As expected, the validation accuracy is way higher than the training accuracy. And similarly, the validation loss is very low compared to the training loss. The training metrics continued to improve but it was jagged and I can't really tell if they plateaued or not.\n",
+    "> 2.     The model will generalize because the validation accuracy is higher than the training accuracy, and the validation loss is lower than the training loss. With more epoch, the training set may catch up to the validation set and perhaps make the val set better?"
    ]
   },
   {
@@ -501,7 +501,11 @@
    "id": "dd845d30-d8d1-4dbd-b984-c5f41e03a8b5",
    "metadata": {},
    "source": [
-    "> **Answer:**     "
+    "> **Answer:**     These were my results from the model:\n",
+    "Overall accuracy = 0.8235\n",
+    "Average precision = 0.8305\n",
+    "Average recall = 0.8235\n",
+    "It seems like the model is consistent in its classification and does not have bias towards false positives or false negatives."
    ]
   },
   {
@@ -517,7 +521,8 @@
    "id": "be4a68f3-f521-4b23-8b3d-4825150238f9",
    "metadata": {},
    "source": [
-    "> **Answer:**      "
+    "> **Answer:**      \n",
+    "The confusion matrix tells me that for the most part the model is doing well. The off-diagona spots are images that the model is misclassifying. I'm not sure the ordering of the classes, but it seems the model could be misclassifying similar images as there are clusters very close to the diagonal. Either way, we should look at the incorrectly classified images."
    ]
   },
   {
@@ -536,8 +541,8 @@
    "metadata": {},
    "source": [
     "> **Answers:**     \n",
-    "> 1.      \n",
-    "> 2.     "
+    "> 1.      The fine tuning does seem to have improved loss and accuracy of both validation and test. \n",
+    "> 2.     All 4 epochs contributed to increasing the quality of the mode. I don't think it has plateaued yet, so more epochs could be beneficial. "
    ]
   },
   {
