--- a/Labs/8_ObjectDetection.ipynb
+++ b/Labs/8_ObjectDetection.ipynb
@@ -367,8 +367,8 @@
    "metadata": {},
    "source": [
     "> **Answer:**  \n",
-    "> 1.       \n",
-    "> 2.    "
+    "> 1.     Using patches allows the model to focus on smaller regions of the image, so it makes it good for object detection.  \n",
+    "> 2.    original image had 224x224 pixels, and the patch size is 32x32, so the computational burden is reduced by a factor of 49. "
    ]
   },
   {
@@ -410,10 +410,10 @@
    "metadata": {},
    "source": [
     "> **Answers:**   \n",
-    "> 1.     \n",
-    "> 2.     \n",
-    "> 3.       \n",
-    "> 4.    "
+    "> 1.     It has a transformer layer, but it is not a pure transformer model because it has a MLP layer after all the transformer layers.\n",
+    "> 2.    Transformer models use multi-head attention to weight different areas of the image while the full image is processed in the SSD or YOLO models.\n",
+    "> 3.       This model breaks the images in patches, which is an extenion of the Vaswani model.\n",
+    "> 4.    the loop is what creates each transformer block. It creates a multi-head attension layer with layers.MultiHeadAttension interspersed with normalization layers. Then it adds an MLP layer on top. "
    ]
   },
   {
@@ -443,7 +443,7 @@
    "id": "6de2dc61-e063-42d7-ae25-8946086c3614",
    "metadata": {},
    "source": [
-    "> **Answer:**    "
+    "> **Answer:**    The test and training losses converge quickly and smoothly, which indicates that the model is learning well."
    ]
   },
   {
@@ -473,9 +473,9 @@
    "metadata": {},
    "source": [
     "> **Answers:** \n",
-    "> 1.    \n",
-    "> 2.    \n",
-    "> 3.   "
+    "> 1.    It will make the training a bit worse, perhaps having an upper limit to the accuracy of the trained model since the annotations are not 100% perfect.\n",
+    "> 2.    It tells us overall how the model is doing, but it won't tell us which parts of the plane the model isn't detecting, such as one of the photos where the wheels were not detected.\n",
+    "> 3.   Potentially. All the training images have the plane centered and taking up most of the image space. A wider variety of plane positions and sizes would be better for the model."
    ]
   },
   {
